samples/_failures_safe/1761462378_6848a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a0af701.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_7a0af701.c:170:13: error: expected declaration or statement at end of input
  170 |             token.type = TOKEN_PUNCTUATION;
      |             ^~~~~
./samples/SAFE/__tmp_7a0af701.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a0af701.c:170:13: error: expected declaration or statement at end of input
